[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/spaceship/spaceship.gd" type="Script" id=1]
[ext_resource path="res://assets/images/spaceship.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 187.855, 55.5015 )

[node name="spaceship" type="Area2D"]
position = Vector2( 730, 300 )
script = ExtResource( 1 )

[node name="image" type="Sprite" parent="."]
scale = Vector2( 1.8, 1.8 )
texture = ExtResource( 2 )

[node name="ignored_collision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )
disabled = true

[node name="tween" type="Tween" parent="."]

[node name="center_drop_position" type="Position2D" parent="."]
position = Vector2( 0, 200 )

[node name="right_drop_position" type="Position2D" parent="."]
position = Vector2( 470, 100 )

[node name="left_drop_position" type="Position2D" parent="."]
position = Vector2( -480, 100 )

[node name="spaceship_drop_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.5, -0.5 )
scale = Vector2( 67.85, 27.95 )
[connection signal="timeout" from="spaceship_drop_timer" to="." method="_on_Timer_timeout"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
